Arregle detalle de Peliculas

--- a/detail-movie.html
+++ b/detail-movie.html
@@ -12,9 +12,7 @@
     <div>
         <H2>DETALLES DE PELICULAS</H2>
     </div>
-    <div>
-        <H2>PELÍCULAS POPULARES</H2>
-    </div>
+
     <section>
         <article>
             <h3>Avengers:EndGame</h3>
@@ -107,6 +105,9 @@
             <h4>
                 <a href="./genres.html">Género</a>
             </h4>
+            <p>
+                <a href="./detail-genres.html">Familia</a>
+            </p>
             <h4>Fecha de Estreno:</h4>
             <p>2/6/2019</p>
             <article>
@@ -139,191 +140,196 @@
                 </h4>
                 <p>4/10/2018</p>
             </article>
-</body>
+            <section>
+                <section>
+                    <article>
+                        <h3>
+                            <a>Avengers:Infinity War</a>
+                        </h3>
+                        <h5>
+                            <a>Duración (2h 29m)</a>
+                        </h5>
 
-</html>
-<!DOCTYPE html>
-<html lang="en">
+                        <img src="./img-series-nuevo/Avengers_Infinity_War_-_Póster_oficial.png" alt="">
+                        <h4>
+                            <a>Sínopsis:</a>
+                        </h4>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+                        <p>Después de los eventos devastadores de 'Avengers: Infinity War', el universo está en ruinas
+                            debido a las
+                            acciones de Thanos, el Titán Loco. Con la ayuda de los aliados que quedaron, los Vengadores
+                            deberán
+                            reunirse una vez más para intentar deshacer sus acciones y restaurar el orden en el universo
+                            de
+                            una vez
+                            por todas, sin importar cuáles son las consecuencias... Cuarta y última entrega de la saga
+                            "Vengadores"
+                        </p>
 
-<body>
-
-    <section>
-        <article>
-            <h3>
-                <a>Avengers:Infinity War</a>
-            </h3>
-            <h5>
-                <a>Duración (2h 29m)</a>
-            </h5>
-
-            <img src="./img-series-nuevo/Avengers_Infinity_War_-_Póster_oficial.png" alt="">
-            <h4>
-                <a>Sínopsis:</a>
-            </h4>
-
-            <p>Después de los eventos devastadores de 'Avengers: Infinity War', el universo está en ruinas debido a las
-                acciones de Thanos, el Titán Loco. Con la ayuda de los aliados que quedaron, los Vengadores deberán
-                reunirse una vez más para intentar deshacer sus acciones y restaurar el orden en el universo de una vez
-                por todas, sin importar cuáles son las consecuencias... Cuarta y última entrega de la saga "Vengadores"
-            </p>
-
-            <h4>
-                <a>Calificación:</a>
-            </h4>
-            <p>8.4/10⭐</p>
-            <h4>
-                <a>Género:</a>
-            </h4>
-            <P> </P>
-            <h4>
-                <a>Fecha de Estreno:</a>
-            </h4>
-            <p>22/4/2019</p>
-        </article>
+                        <h4>
+                            <a>Calificación:</a>
+                        </h4>
+                        <p>8.4/10⭐</p>
+                        <h4>
+                            <a>Género:</a>
+                        </h4>
+                        <P> </P>
+                        <h4>
+                            <a>Fecha de Estreno:</a>
+                        </h4>
+                        <p>22/4/2019</p>
+                    </article>
+                </section>
 
 
-        <article>
-            <h3>
-                <a>DeadPool</a>
-            </h3>
-            <h5>
-                <a>Duración (1h 48m)</a>
-            </h5>
-            <img src="./img-series-nuevo/DeadPool.jpg" alt="">
-            <h4>
-                <a>Sínopsis:</a>
-            </h4>
-            <p>
-                Basado en el anti-héroe menos convencional de la Marvel, Deadpool narra el origen de un ex-operativo de
-                la fuerzas especiales llamado Wade Wilson, reconvertido a mercenario, y que tras ser sometido a un cruel
-                experimento adquiere poderes de curación rápida, adoptando Wade entonces el alter ego de Deadpool.
-                Armado con sus nuevas habilidades y un oscuro y retorcido sentido del humor, Deadpool intentará dar caza
-                al hombre que casi destruye su vida.
-            </p>
-            <h4>
-                <a>Calificación:</a>
-            </h4>
-            <p>8.0/10⭐</p>
-            <h4>
-                <a>Género:</a>
-            </h4>
-            <P></P>
-            <h4>
-                <a>Fecha de Estreno:</a>
-            </h4>
-            <p>11/2/2016</p>
-        </article>
+                <article>
+                    <h3>
+                        <a>DeadPool</a>
+                    </h3>
+                    <h5>
+                        <a>Duración (1h 48m)</a>
+                    </h5>
+                    <img src="./img-series-nuevo/DeadPool.jpg" alt="">
+                    <h4>
+                        <a>Sínopsis:</a>
+                    </h4>
+                    <p>
+                        Basado en el anti-héroe menos convencional de la Marvel, Deadpool narra el origen de un
+                        ex-operativo de
+                        la fuerzas especiales llamado Wade Wilson, reconvertido a mercenario, y que tras ser sometido a
+                        un cruel
+                        experimento adquiere poderes de curación rápida, adoptando Wade entonces el alter ego de
+                        Deadpool.
+                        Armado con sus nuevas habilidades y un oscuro y retorcido sentido del humor, Deadpool intentará
+                        dar caza
+                        al hombre que casi destruye su vida.
+                    </p>
+                    <h4>
+                        <a>Calificación:</a>
+                    </h4>
+                    <p>8.0/10⭐</p>
+                    <h4>
+                        <a>Género:</a>
+                    </h4>
+                    <P></P>
+                    <h4>
+                        <a>Fecha de Estreno:</a>
+                    </h4>
+                    <p>11/2/2016</p>
+                </article>
 
 
-        <article>
-            <h3>
-                <a>Iron Man</a>
-            </h3>
-            <h5>
-                <a>Duración (2h 6m)</a>
-            </h5>
-            <img src="./img-series-nuevo/Iron Man.jpg" alt="">
-            <h4>
-                <a>Sínopsis:</a>
-            </h4>
-            <p>
-                El multimillonario fabricante de armas Tony Stark (Robert Downey Jr.) debe enfrentarse a su turbio
-                pasado después de sufrir un accidente con una de sus armas. Equipado con una armadura de última
-                generación tecnológica, se convierte en "El hombre de hierro", un héroe que se dedica a combatir el mal
-                en todo el mundo.
-            </p>
-            <h4>
-                <a>Calificación:</a>
-            </h4>
-            <p>7.9/10⭐</p>
-            <h4>
-                <a>Género:</a>
-            </h4>
-            <P></P>
-            <h4>
-                <a>Fecha de Estreno:</a>
-            </h4>
-            <p>30/4/2008</p>
-        </article>
+                <article>
+                    <h3>
+                        <a>Iron Man</a>
+                    </h3>
+                    <h5>
+                        <a>Duración (2h 6m)</a>
+                    </h5>
+                    <img src="./img-series-nuevo/Iron Man.jpg" alt="">
+                    <h4>
+                        <a>Sínopsis:</a>
+                    </h4>
+                    <p>
+                        El multimillonario fabricante de armas Tony Stark (Robert Downey Jr.) debe enfrentarse a su
+                        turbio
+                        pasado después de sufrir un accidente con una de sus armas. Equipado con una armadura de última
+                        generación tecnológica, se convierte en "El hombre de hierro", un héroe que se dedica a combatir
+                        el mal
+                        en todo el mundo.
+                    </p>
+                    <h4>
+                        <a>Calificación:</a>
+                    </h4>
+                    <p>7.9/10⭐</p>
+                    <h4>
+                        <a>Género:</a>
+                    </h4>
+                    <P></P>
+                    <h4>
+                        <a>Fecha de Estreno:</a>
+                    </h4>
+                    <p>30/4/2008</p>
+                </article>
 
 
 
-        <article>
+                <article>
 
-            <h3>
-                <a>Justice League</a>
-            </h3>
-            <h5>
-                <a>Duración (2h)</a>
-            </h5>
-            <img src="./img/Justice_League_-_Póster_con_Superman.png" alt="">
-            <h4>
-                <a>Sínopsis:</a>
-            </h4>
-            <p>
-                Motivado por la fe que había recuperado en la humanidad e inspirado por la acción altruista de Superman,
-                Bruce Wayne recluta la ayuda de su nueva aliada, Diana Prince, para enfrentarse a un enemigo aún mayor.
-                Juntos, Batman y Wonder Woman se mueven rápidamente para intentar encontrar y reclutar un equipo de
-                metahumanos que combata esta nueva amenaza. El problema es que a pesar de la formación de esta liga de
-                héroes sin precedentes –Batman, Wonder Woman, Aquaman, Cyborg y Flash– puede que sea demasiado tarde
-                para salvar el planeta de una amenaza de proporciones catastróficas.
+                    <h3>
+                        <a>Justice League</a>
+                    </h3>
+                    <h5>
+                        <a>Duración (2h)</a>
+                    </h5>
+                    <img src="./img/Justice_League_-_Póster_con_Superman.png" alt="">
+                    <h4>
+                        <a>Sínopsis:</a>
+                    </h4>
+                    <p>
+                        Motivado por la fe que había recuperado en la humanidad e inspirado por la acción altruista de
+                        Superman,
+                        Bruce Wayne recluta la ayuda de su nueva aliada, Diana Prince, para enfrentarse a un enemigo aún
+                        mayor.
+                        Juntos, Batman y Wonder Woman se mueven rápidamente para intentar encontrar y reclutar un equipo
+                        de
+                        metahumanos que combata esta nueva amenaza. El problema es que a pesar de la formación de esta
+                        liga de
+                        héroes sin precedentes –Batman, Wonder Woman, Aquaman, Cyborg y Flash– puede que sea demasiado
+                        tarde
+                        para salvar el planeta de una amenaza de proporciones catastróficas.
 
-            </p>
-            <h4>
-                <a>Calificación:</a>
-            </h4>
-            <p>6.1/10⭐</p>
-            <h4>
-                <a>Género:</a>
-            </h4>
-            <P></P>
-            <h4>
-                <a>Fecha de Estreno:</a>
-            </h4>
-            <p>16/11/2017</p>
-        </article>
+                    </p>
+                    <h4>
+                        <a>Calificación:</a>
+                    </h4>
+                    <p>6.1/10⭐</p>
+                    <h4>
+                        <a>Género:</a>
+                    </h4>
+                    <P></P>
+                    <h4>
+                        <a>Fecha de Estreno:</a>
+                    </h4>
+                    <p>16/11/2017</p>
+                </article>
 
 
 
-        <article>
-            <h3>
-                <a>Spider-Man 2</a>
-            </h3>
-            <h5>
-                <a>Duración (2h 7m)</a>
-            </h5>
-            <img src="./img-series-nuevo/Spiderman 2.jpg" alt="">
-            <h4>
-                <a>Sínopsis:</a>
-            </h4>
-            <p>
-                Han pasado dos años desde que el tranquilo Peter Parker dejó a Mary Jane Watson, su gran amor, y
-                decidió seguir asumiendo sus responsabilidades como Spider-Man. Peter debe afrontar nuevos desafíos
-                mientras lucha contra el don y la maldición de sus poderes equilibrando sus dos identidades: el
-                escurridizo superhéroe Spider-Man y el estudiante universitario. Las relaciones con las personas que
-                más aprecia están ahora en peligro de ser descubiertas con la aparición del poderoso villano de
-                múltiples tentáculos Doctor Octopus, "Doc Ock".
-            </p>
-            <h4>
-                <a>Calificación:</a>
-            </h4>
-            <p>7.3⭐</p>
-            <h4>
-                <a>Género:</a>
-            </h4>
-            <P></P>
-            <h4>
-                <a>Fecha de Estreno:</a>
-            </h4>
-            <p>1/7/2004</p>
-        </article>
+                <article>
+                    <h3>
+                        <a>Spider-Man 2</a>
+                    </h3>
+                    <h5>
+                        <a>Duración (2h 7m)</a>
+                    </h5>
+                    <img src="./img-series-nuevo/Spiderman 2.jpg" alt="">
+                    <h4>
+                        <a>Sínopsis:</a>
+                    </h4>
+                    <p>
+                        Han pasado dos años desde que el tranquilo Peter Parker dejó a Mary Jane Watson, su gran amor, y
+                        decidió seguir asumiendo sus responsabilidades como Spider-Man. Peter debe afrontar nuevos
+                        desafíos
+                        mientras lucha contra el don y la maldición de sus poderes equilibrando sus dos identidades: el
+                        escurridizo superhéroe Spider-Man y el estudiante universitario. Las relaciones con las personas
+                        que
+                        más aprecia están ahora en peligro de ser descubiertas con la aparición del poderoso villano de
+                        múltiples tentáculos Doctor Octopus, "Doc Ock".
+                    </p>
+                    <h4>
+                        <a>Calificación:</a>
+                    </h4>
+                    <p>7.3⭐</p>
+                    <h4>
+                        <a>Género:</a>
+                    </h4>
+                    <P></P>
+                    <h4>
+                        <a>Fecha de Estreno:</a>
+                    </h4>
+                    <p>1/7/2004</p>
+                </article>
 </body>
 
 </html>
