Cambios en etiquetas <a> y links

--- a/detail-movie.html
+++ b/detail-movie.html
@@ -32,13 +32,14 @@
                 <a href="./genres.html">Género:</a>
             </h4>
             <P>
-                <a href="./detail-genres.html"></a>
+                <a href="./detail-genres.html">Familia</a>
             </P>
             <h4>Fecha de Estreno:</h4>
             <p>22/4/2019</p>
         </article>
+    </section>
 
-
+    <section>
         <article>
             <h3>The Dark Knight</h3>
             <h4>Duración (2h 32m)</h4>
@@ -57,11 +58,13 @@
                 <a href="./genres.html">Género</a>
             </h4>
             <P>
-                <a href="./detail-genres.html"></a>
+                <a href="./detail-genres.html">Acción</a>
             </P>
             <h4>Fecha de Estreno:</h4>
             <p>17/7/2008</p>
         </article>
+    </section>
+    <section>
         <article>
             <h3>The Suicide Squad</h3>
             <h4>Duración (2h 12m)</h4>
@@ -79,13 +82,14 @@
                 <a href="./genres.html">Género</a>
             </h4>
             <P>
-                <a href="./detail-genres.html"></a>
+                <a href="./detail-genres.html">Ciencia Ficción</a>
             </P>
             <h4>Fecha de Estreno:</h4>
             <p>5/8/2021</p>
         </article>
+    </section>
 
-
+    <section>
         <article>
             <h3>Spiderman: Far From Home</h3>
             <h4>
@@ -111,225 +115,248 @@
             <h4>Fecha de Estreno:</h4>
             <p>2/6/2019</p>
             <article>
+    </section>
+
+    <section>
+        <h3>Venom</h3>
+        <h4>Duración (2h 20m)</h4>
+        <img src="./img/venom-cartel-final-1537282420.jpg" alt="">
+        <h4>Sínopsis:</h4>
+        <p>Como periodista, Eddie Brock (Tom Hardy) lleva tiempo intentando desenmascarar al creador de la
+            Fundación Vida, el famoso genio científico Carlton Drake (Riz Ahmed), una obsesión que ha arruinado
+            su carrera y su relación con su novia, Anne (Michelle Williams). Al investigar uno de los
+            experimentos de Drake, el ente alienígena Venom se fusiona con el cuerpo de Eddie, y el reportero
+            adquiere de pronto nuevos e increíbles superpoderes, así como la oportunidad de hacer prácticamente
+            lo que se le antoje. Retorcido, oscuro, impredecible e impulsado por la cólera, Venom obliga a Eddie
+            a luchar por controlar unas habilidades sumamente peligrosas que, al mismo tiempo, también resultan
+            embriagadoras y le hacen sentir poderoso. Dado que Eddie y Venom se necesitan mutuamente para
+            conseguir lo que quieren, se van entremezclando cada vez más... ¿Dónde acaba Eddie y empieza Venom?
+        </p>
+        <h4>Calificación:</h4>
+        <p>6.7⭐</p>
+        <h4>
+            <a href="./genres.html">Género</a>
+        </h4>
+        <P>
+            <a href="./detail-genres.html">Ciencia Ficción</a>
+        </P>
+        <h4>
+            <a>Fecha de Estreno:</a>
+        </h4>
+        <p>4/10/2018</p>
+        </article>
+    </section>
+
+    <section>
+        <article>
+            <h3>
+                Avengers:Infinity War
+            </h3>
+            <h4>
+                Duración (2h 29m)
+            </h4>
+
+            <img src="./img-series-nuevo/Avengers_Infinity_War_-_Póster_oficial.png" alt="">
+            <h4>
+                Sínopsis:
+            </h4>
+
+            <p>Después de los eventos devastadores de 'Avengers: Infinity War', el universo está en ruinas
+                debido a las
+                acciones de Thanos, el Titán Loco. Con la ayuda de los aliados que quedaron, los Vengadores
+                deberán
+                reunirse una vez más para intentar deshacer sus acciones y restaurar el orden en el universo
+                de
+                una vez
+                por todas, sin importar cuáles son las consecuencias... Cuarta y última entrega de la saga
+                "Vengadores"
+            </p>
+
+            <h4>
+                Calificación:
+            </h4>
+            <p>8.4/10⭐</p>
+
+            <h4>
+                <a href="./genres.html">Género</a>
+            </h4>
+            <P>
+                <a href="./detail-genres.html">Familia</a>
+            </P>
+            <h4>
+                <h4>
+                    Fecha de Estreno:
+                </h4>
+                <p>22/4/2019</p>
+        </article>
+    </section>
+
+    <section>
+        <article>
+            <h3>
+                DeadPool
+            </h3>
+            <h4>
+                Duración (1h 48m)
+            </h4>
+            <img src="./img-series-nuevo/DeadPool.jpg" alt="">
+            <h4>
+                Sínopsis:
+            </h4>
+            <p>
+                Basado en el anti-héroe menos convencional de la Marvel, Deadpool narra el origen de un
+                ex-operativo de
+                la fuerzas especiales llamado Wade Wilson, reconvertido a mercenario, y que tras ser sometido a
+                un cruel
+                experimento adquiere poderes de curación rápida, adoptando Wade entonces el alter ego de
+                Deadpool.
+                Armado con sus nuevas habilidades y un oscuro y retorcido sentido del humor, Deadpool intentará
+                dar caza
+                al hombre que casi destruye su vida.
+            </p>
+            <h4>
+                Calificación:
+            </h4>
+            <p>8.0/10⭐</p>
+
+            <h4>
+                <a href="./genres.html">Género</a>
+            </h4>
+            <P>
+                <a href="./detail-genres.html">Acción</a>
+            </P>
+            <h4>
+                Fecha de Estreno:
+            </h4>
+            <p>11/2/2016</p>
+        </article>
+    </section>
+
+    <section>
+        <article>
+            <h3>
+                Iron Man
+            </h3>
+            <h4>
+                Duración (2h 6m)
+            </h4>
+            <img src="./img-series-nuevo/Iron Man.jpg" alt="">
+            <h4>
+                <a>Sínopsis:</a>
+            </h4>
+            <p>
+                El multimillonario fabricante de armas Tony Stark (Robert Downey Jr.) debe enfrentarse a su
+                turbio
+                pasado después de sufrir un accidente con una de sus armas. Equipado con una armadura de última
+                generación tecnológica, se convierte en "El hombre de hierro", un héroe que se dedica a combatir
+                el mal
+                en todo el mundo.
+            </p>
+            <h4>
+                Calificación:
+            </h4>
+            <p>7.9/10⭐</p>
+            <h4>
+                <a href="./genres.html">Género</a>
+            </h4>
+            <P>
+                <a href="./detail-genres.html">Acción</a>
+            </P>
+            <h4>
+                <h4>
+                    <a>Fecha de Estreno:</a>
+                </h4>
+                <p>30/4/2008</p>
+        </article>
+    </section>
 
 
-                <h3>Venom</h3>
-                <h4>Duración (2h 20m)</h4>
-                <img src="./img/venom-cartel-final-1537282420.jpg" alt="">
-                <h4>Sínopsis:</h4>
-                <p>Como periodista, Eddie Brock (Tom Hardy) lleva tiempo intentando desenmascarar al creador de la
-                    Fundación Vida, el famoso genio científico Carlton Drake (Riz Ahmed), una obsesión que ha arruinado
-                    su carrera y su relación con su novia, Anne (Michelle Williams). Al investigar uno de los
-                    experimentos de Drake, el ente alienígena Venom se fusiona con el cuerpo de Eddie, y el reportero
-                    adquiere de pronto nuevos e increíbles superpoderes, así como la oportunidad de hacer prácticamente
-                    lo que se le antoje. Retorcido, oscuro, impredecible e impulsado por la cólera, Venom obliga a Eddie
-                    a luchar por controlar unas habilidades sumamente peligrosas que, al mismo tiempo, también resultan
-                    embriagadoras y le hacen sentir poderoso. Dado que Eddie y Venom se necesitan mutuamente para
-                    conseguir lo que quieren, se van entremezclando cada vez más... ¿Dónde acaba Eddie y empieza Venom?
-                </p>
-                <h4>Calificación:</h4>
-                <p>6.7⭐</p>
+    <section>
+        <article>
+
+            <h3>
+                <a>Justice League</a>
+            </h3>
+            <h4>
+                Duración (2h)
+            </h4>
+            <img src="./img/Justice_League_-_Póster_con_Superman.png" alt="">
+            <h4>
+                Sínopsis:
+            </h4>
+            <p>
+                Motivado por la fe que había recuperado en la humanidad e inspirado por la acción altruista de
+                Superman,
+                Bruce Wayne recluta la ayuda de su nueva aliada, Diana Prince, para enfrentarse a un enemigo aún
+                mayor.
+                Juntos, Batman y Wonder Woman se mueven rápidamente para intentar encontrar y reclutar un equipo
+                de
+                metahumanos que combata esta nueva amenaza. El problema es que a pesar de la formación de esta
+                liga de
+                héroes sin precedentes –Batman, Wonder Woman, Aquaman, Cyborg y Flash– puede que sea demasiado
+                tarde
+                para salvar el planeta de una amenaza de proporciones catastróficas.
+
+            </p>
+            <h4>
+                Calificación:
+            </h4>
+            <p>6.1/10⭐</p>
+            <h4>
                 <h4>
                     <a href="./genres.html">Género</a>
                 </h4>
                 <P>
-                    <a href="./detail-genres.html"></a>
+                    <a href="./detail-genres.html">Ciencia Ficción</a>
                 </P>
                 <h4>
-                    <a>Fecha de Estreno:</a>
-                </h4>
-                <p>4/10/2018</p>
-            </article>
-            <section>
-                <section>
-                    <article>
-                        <h3>
-                            <a>Avengers:Infinity War</a>
-                        </h3>
-                        <h5>
-                            <a>Duración (2h 29m)</a>
-                        </h5>
-
-                        <img src="./img-series-nuevo/Avengers_Infinity_War_-_Póster_oficial.png" alt="">
-                        <h4>
-                            <a>Sínopsis:</a>
-                        </h4>
-
-                        <p>Después de los eventos devastadores de 'Avengers: Infinity War', el universo está en ruinas
-                            debido a las
-                            acciones de Thanos, el Titán Loco. Con la ayuda de los aliados que quedaron, los Vengadores
-                            deberán
-                            reunirse una vez más para intentar deshacer sus acciones y restaurar el orden en el universo
-                            de
-                            una vez
-                            por todas, sin importar cuáles son las consecuencias... Cuarta y última entrega de la saga
-                            "Vengadores"
-                        </p>
-
-                        <h4>
-                            <a>Calificación:</a>
-                        </h4>
-                        <p>8.4/10⭐</p>
-                        <h4>
-                            <a>Género:</a>
-                        </h4>
-                        <P> </P>
-                        <h4>
-                            <a>Fecha de Estreno:</a>
-                        </h4>
-                        <p>22/4/2019</p>
-                    </article>
-                </section>
-
-
-                <article>
-                    <h3>
-                        <a>DeadPool</a>
-                    </h3>
-                    <h5>
-                        <a>Duración (1h 48m)</a>
-                    </h5>
-                    <img src="./img-series-nuevo/DeadPool.jpg" alt="">
-                    <h4>
-                        <a>Sínopsis:</a>
-                    </h4>
-                    <p>
-                        Basado en el anti-héroe menos convencional de la Marvel, Deadpool narra el origen de un
-                        ex-operativo de
-                        la fuerzas especiales llamado Wade Wilson, reconvertido a mercenario, y que tras ser sometido a
-                        un cruel
-                        experimento adquiere poderes de curación rápida, adoptando Wade entonces el alter ego de
-                        Deadpool.
-                        Armado con sus nuevas habilidades y un oscuro y retorcido sentido del humor, Deadpool intentará
-                        dar caza
-                        al hombre que casi destruye su vida.
-                    </p>
-                    <h4>
-                        <a>Calificación:</a>
-                    </h4>
-                    <p>8.0/10⭐</p>
-                    <h4>
-                        <a>Género:</a>
-                    </h4>
-                    <P></P>
-                    <h4>
-                        <a>Fecha de Estreno:</a>
-                    </h4>
-                    <p>11/2/2016</p>
-                </article>
-
-
-                <article>
-                    <h3>
-                        <a>Iron Man</a>
-                    </h3>
-                    <h5>
-                        <a>Duración (2h 6m)</a>
-                    </h5>
-                    <img src="./img-series-nuevo/Iron Man.jpg" alt="">
-                    <h4>
-                        <a>Sínopsis:</a>
-                    </h4>
-                    <p>
-                        El multimillonario fabricante de armas Tony Stark (Robert Downey Jr.) debe enfrentarse a su
-                        turbio
-                        pasado después de sufrir un accidente con una de sus armas. Equipado con una armadura de última
-                        generación tecnológica, se convierte en "El hombre de hierro", un héroe que se dedica a combatir
-                        el mal
-                        en todo el mundo.
-                    </p>
-                    <h4>
-                        <a>Calificación:</a>
-                    </h4>
-                    <p>7.9/10⭐</p>
-                    <h4>
-                        <a>Género:</a>
-                    </h4>
-                    <P></P>
-                    <h4>
-                        <a>Fecha de Estreno:</a>
-                    </h4>
-                    <p>30/4/2008</p>
-                </article>
-
-
-
-                <article>
-
-                    <h3>
-                        <a>Justice League</a>
-                    </h3>
-                    <h5>
-                        <a>Duración (2h)</a>
-                    </h5>
-                    <img src="./img/Justice_League_-_Póster_con_Superman.png" alt="">
-                    <h4>
-                        <a>Sínopsis:</a>
-                    </h4>
-                    <p>
-                        Motivado por la fe que había recuperado en la humanidad e inspirado por la acción altruista de
-                        Superman,
-                        Bruce Wayne recluta la ayuda de su nueva aliada, Diana Prince, para enfrentarse a un enemigo aún
-                        mayor.
-                        Juntos, Batman y Wonder Woman se mueven rápidamente para intentar encontrar y reclutar un equipo
-                        de
-                        metahumanos que combata esta nueva amenaza. El problema es que a pesar de la formación de esta
-                        liga de
-                        héroes sin precedentes –Batman, Wonder Woman, Aquaman, Cyborg y Flash– puede que sea demasiado
-                        tarde
-                        para salvar el planeta de una amenaza de proporciones catastróficas.
-
-                    </p>
-                    <h4>
-                        <a>Calificación:</a>
-                    </h4>
-                    <p>6.1/10⭐</p>
-                    <h4>
-                        <a>Género:</a>
-                    </h4>
-                    <P></P>
                     <h4>
                         <a>Fecha de Estreno:</a>
                     </h4>
                     <p>16/11/2017</p>
-                </article>
+        </article>
+    </section>
 
 
-
-                <article>
-                    <h3>
-                        <a>Spider-Man 2</a>
-                    </h3>
-                    <h5>
-                        <a>Duración (2h 7m)</a>
-                    </h5>
-                    <img src="./img-series-nuevo/Spiderman 2.jpg" alt="">
-                    <h4>
-                        <a>Sínopsis:</a>
-                    </h4>
-                    <p>
-                        Han pasado dos años desde que el tranquilo Peter Parker dejó a Mary Jane Watson, su gran amor, y
-                        decidió seguir asumiendo sus responsabilidades como Spider-Man. Peter debe afrontar nuevos
-                        desafíos
-                        mientras lucha contra el don y la maldición de sus poderes equilibrando sus dos identidades: el
-                        escurridizo superhéroe Spider-Man y el estudiante universitario. Las relaciones con las personas
-                        que
-                        más aprecia están ahora en peligro de ser descubiertas con la aparición del poderoso villano de
-                        múltiples tentáculos Doctor Octopus, "Doc Ock".
-                    </p>
-                    <h4>
-                        <a>Calificación:</a>
-                    </h4>
-                    <p>7.3⭐</p>
-                    <h4>
-                        <a>Género:</a>
-                    </h4>
-                    <P></P>
-                    <h4>
-                        <a>Fecha de Estreno:</a>
-                    </h4>
-                    <p>1/7/2004</p>
-                </article>
+    <section>
+        <article>
+            <h3>
+                Spider-Man 2
+            </h3>
+            <h4>
+                Duración (2h 7m)
+            </h4>
+            <img src="./img-series-nuevo/Spiderman 2.jpg" alt="">
+            <h4>
+                Sínopsis:
+            </h4>
+            <p>
+                Han pasado dos años desde que el tranquilo Peter Parker dejó a Mary Jane Watson, su gran amor, y
+                decidió seguir asumiendo sus responsabilidades como Spider-Man. Peter debe afrontar nuevos
+                desafíos
+                mientras lucha contra el don y la maldición de sus poderes equilibrando sus dos identidades: el
+                escurridizo superhéroe Spider-Man y el estudiante universitario. Las relaciones con las personas
+                que
+                más aprecia están ahora en peligro de ser descubiertas con la aparición del poderoso villano de
+                múltiples tentáculos Doctor Octopus, "Doc Ock".
+            </p>
+            <h4>
+                Calificación:
+            </h4>
+            <p>7.3⭐</p>
+            <h4>
+                <a href="./genres.html">Género</a>
+            </h4>
+            <P>
+                <a href="./detail-genres.html">Familia</a>
+            </P>
+            <h4>
+                <h4>
+                    <a>Fecha de Estreno:</a>
+                </h4>
+                <p>1/7/2004</p>
+        </article>
+    </section>
 </body>
 
 </html>
