--- a/detail-series.html
+++ b/detail-series.html
@@ -51,7 +51,7 @@
                 <a href="./genres.html">Género:</a>
             </h4>
             <P>
-                <a href="./detail-genres.html"></a>
+                <a href="./detail-genres.html">Acción</a>
             </P>
             <h4>Fecha de Estreno:</h4>
             <p>10/4/2015</p>
@@ -93,7 +93,7 @@
                 <a href="./genres.html">Género:</a>
             </h4>
             <P>
-                <a href="./detail-genres.html"></a>
+                <a href="./detail-genres.html">Acción</a>
             </P>
             <h4>Fecha de Estreno:</h4>
             <p>22/9/2014</p>
@@ -116,7 +116,7 @@
                     <a href="./genres.html">Género</a>
                 </h4>
                 <P>
-                    <a href="./detail-genres.html"></a>
+                    <a href="./detail-genres.html">Familia</a>
                 </P>
                 <h4>Fecha de Estreno:</h4>
                 <p>9/6/2021</p>
